# TimmyBucketDisco

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/: obj.h  shader.h
include/glad/: glad.h
screenshots/task2/: bucket_point_dyn.mkv  timmy_point_dyn.mkv
screenshots/task3/: at_disco_dyn.mkv
shaders/: shader.fs  shader.vs
